2008-11-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Alarm.cs, src/SleepTimerConfigDialog.cs, src/AssemblyInfo.cs.in,
	  src/AlarmConfigDialog.cs, src/VolumeFade.cs,
	  src/ConfigurationDialog.cs, src/AlarmClockService.cs: Improve code
	  formatting and some other cosmetic stuff.

2008-05-11  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* configure.ac: Fix banshee version dependency.

2008-05-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.4.1 released. Works only with banshee 0.99.1 and above. 

2008-05-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Banshee.AlarmClock.addin.xml, configure.ac: Update version.

2008-05-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Alarm.cs, src/AlarmClockService.cs: Update to new PlayerEngine API.

2008-05-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Banshee.AlarmClock.addin.xml: Add missing addin dependency.

2008-05-01  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Banshee.AlarmClock.addin.xml: Update addin metadata.

2008-03-29  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.4.0 released. Works only with banshee 0.98.2 and above. 

2008-03-29  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* build/gconf-schema-rules, configure.ac: Installation fixes. Now works as
	  before.

2008-03-29  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* Makefile.am, build/build.mk: Clean-up.
	* src/Makefile.am: Change assembly name to Banshee.AlarmClock.

2008-03-29  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* README: Update to match the current UI.
	* TODO: Remove deprecated item.
	* COPYING: Add copyright notice.
	* autogen.sh: Remove useless libtool stuff.

2008-03-26  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/AlarmConfigDialog.cs, src/ConfigurationDialog.cs: Remove useless GConf
	  reference.
	* configure.ac: Use the new pkg-config files from banshee 0.98.2. Comment
	  out the PLUGINDIR stuff for now.
